HTML exercise done

--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -9,8 +9,16 @@
   </head>
   <body>
     <!-- h1 goes here -->
+    <h1>Why I Love Web Development</h1>
     <!-- ol goes here -->
+    <ol>
+      <li>It makes me use my noggin</li>
+      <li>I like the puzzle solving aspect of code</li>
+      <li>I like learning new things</li>
+    </ol>
     <!-- a goes here -->
+    <a href="https://www.webelements.com/" target="_blank">WebElements</a>
     <!-- p goes here -->
+    <p>I would like to make a website eventually, but I really don't have any idea what it would be about.</p>
   </body>
 </html>
